[package]
name = "routing_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
osmpbf = "0.3.3"
rayon = "1.8"
roaring = "0.10"
wgpu = "0.19"
pollster = "0.3" # Per gestire l'async del setup GPU in modo semplice
bytemuck = { version = "1.14", features = ["derive"] } # Per passare dati alla GPU in sicurezza
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"